--- a/large-sized-log-generator-python/choreo/Dockerfile
+++ b/large-sized-log-generator-python/choreo/Dockerfile
@@ -1,14 +1,14 @@
 FROM python:3.9-alpine
 
-RUN addgroup -S runuser \
-    && adduser -S appuser -G runusergroup
+RUN addgroup -S runuser -g 10001 \
+    && adduser -S appuser -G runusergroup -u 10001
 
 RUN LC_ALL=C tr -dc A-Za-z0-9 </dev/urandom | head -c 20000000 > 20MB.txt
 COPY *MB.txt .
 COPY requirements.txt .
 COPY app.py .
 
-USER runuser
+USER 10001
 
 RUN python3 -m pip install -r requirements.txt
 CMD python3 app.py
