Change size to 9KB

--- a/large-sized-log-generator-python/choreo/Dockerfile
+++ b/large-sized-log-generator-python/choreo/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.9-alpine
 RUN addgroup -S appusergroup -g 10001 \
     && adduser -S appuser -G appusergroup -u 10001
 
-RUN LC_ALL=C tr -dc A-Za-z0-9 </dev/urandom | head -c 20000000 > 20MB.txt
+RUN LC_ALL=C tr -dc A-Za-z0-9 </dev/urandom | head -c 9000 > 9KB.txt
 COPY *MB.txt .
 COPY requirements.txt .
 COPY app.py .
